// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`--help output qawolf 1`] = `
"Usage: qawolf [options] [command]

Run QA Wolf flows locally

Options:
  -V, --version                output the version number
  --verbose                    Enable debug logging to stderr
  --json                       Output as JSON
  --agent                      Output for agent consumption
  -h, --help                   display help for command

Commands:
  auth                         Manage authentication with QA Wolf
  doctor [options]             Diagnose problems running flows locally
  flows                        Manage and run QA Wolf flows
  init [options]               Scaffold a QA Wolf project in the current
                               directory
  install [options] [pattern]  Install every runtime dependency the project's
                               flows need
  runner                       Drive an interactive runner on the QA Wolf
                               platform
  automate [options]           Request automation for draft flows. First create
                               a named local .flow.ts draft for every requested
                               journey that does not already have a matching
                               draft; never reuse a generic starter or
                               placeholder. Each new draft must start with a
                               JSDoc Goal: description, import flow from
                               @qawolf/flows/web, and use export default
                               flow(...); a comment-only file or direct
                               test(...) call is not a valid draft. Commit and
                               push all changes with Git to publish them, then
                               list remote drafts to resolve every selected ID.
                               Do not use patch to create or rename a selected
                               flow. Finally make one automation request
                               containing all requested flow IDs.
  environment                  QA Wolf public API environment commands
  flow                         QA Wolf public API flow commands
  issue                        QA Wolf public API issue commands
  run                          Trigger and manage QA Wolf runs on the platform
  tag                          QA Wolf public API tag commands
  help [command]               display help for command
"
`;

exports[`--help output qawolf init 1`] = `
"Usage: qawolf init [options]

Scaffold a QA Wolf project in the current directory

Options:
  --yes       Overwrite existing files without prompting (default: false)
  -h, --help  display help for command

Examples:
  $ qawolf init
  $ qawolf init --yes
"
`;

exports[`--help output qawolf install 1`] = `
"Usage: qawolf install [options] [command] [pattern]

Install every runtime dependency the project's flows need

Arguments:
  pattern                       Glob limiting which flows determine required
                                dependencies

Options:
  --no-browser-deps             Skip installing OS-level browser dependencies
                                (Linux --with-deps, which needs root); requires
                                the system libraries to already be present
  -h, --help                    display help for command

Commands:
  browsers [options] [pattern]  Install Playwright browsers used by the
                                project's web flows
  android [pattern]             Install Android system images, AVDs, and the
                                Appium driver used by the project's Android
                                flows
  clear [options]               Remove the managed runtime cache (all installed
                                runtime versions)

Examples:
  $ qawolf install
  $ qawolf install "flows/checkout/**"
"
`;

exports[`--help output qawolf install browsers 1`] = `
"Usage: qawolf install browsers [options] [pattern]

Install Playwright browsers used by the project's web flows

Options:
  --no-browser-deps  Skip installing OS-level browser dependencies (Linux
                     --with-deps, which needs root); requires the system
                     libraries to already be present
  -h, --help         display help for command

Examples:
  $ qawolf install browsers
  $ qawolf install browsers "flows/web/**"
"
`;

exports[`--help output qawolf install android 1`] = `
"Usage: qawolf install android [options] [pattern]

Install Android system images, AVDs, and the Appium driver used by the project's
Android flows

Options:
  -h, --help  display help for command

Examples:
  $ qawolf install android
  $ qawolf install android "flows/mobile/**"
"
`;

exports[`--help output qawolf install clear 1`] = `
"Usage: qawolf install clear [options]

Remove the managed runtime cache (all installed runtime versions)

Options:
  --yes       Skip the confirmation prompt (default: false)
  -h, --help  display help for command

Examples:
  $ qawolf install clear
  $ qawolf install clear --yes
"
`;

exports[`--help output qawolf doctor 1`] = `
"Usage: qawolf doctor [options]

Diagnose problems running flows locally

Options:
  --all       Run every platform check, including platforms the project does not
              use (default: false)
  -h, --help  display help for command

Examples:
  $ qawolf doctor
  $ qawolf doctor --all
"
`;

exports[`--help output qawolf flows 1`] = `
"Usage: qawolf flows [options] [command]

Manage and run QA Wolf flows

Options:
  -h, --help                display help for command

Commands:
  run [options] [pattern]   Run flows matching [pattern], or every flow when
                            omitted; with --env, pull missing flows from that QA
                            Wolf environment
  list [options] [pattern]  List flows matching [pattern] from the local
                            project, or from a QA Wolf environment with --remote
  pull [options]            Download an environment's flows into the local
                            .qawolf/<env>/ cache
  help [command]            display help for command
"
`;

exports[`--help output qawolf flows run 1`] = `
"Usage: qawolf flows run [options] [pattern]

Run flows matching [pattern], or every flow when omitted; with --env, pull
missing flows from that QA Wolf environment

Options:
  --retries <n>         Retry each failing flow up to this many times (default:
                        0)
  --bail                Stop the run after the first failure (default: false)
  --workers <n>         Parallel worker count for web flows (default: 1)
  --timeout <ms>        Default timeout for actions and assertions, in
                        milliseconds (default: 30000)
  --video <mode>        Record video: on | off | retain-on-failure (default:
                        "off")
  --trace <mode>        Record Playwright trace: on | off | retain-on-failure
                        (default: "off")
  --har <mode>          Record HAR network log: on | off | retain-on-failure
                        (default: "off")
  --har-content <mode>  HAR response bodies: omit | full (full uses more memory)
                        (default: "omit")
  --output-dir <path>   Directory for run artifacts (videos, traces, HAR)
                        (default: ".qawolf/output")
  --junit [path]        Write a JUnit XML report (default:
                        <output-dir>/junit-report.xml)
  --headed              Show the browser window instead of headless (default:
                        false)
  --env <env>           Pull and run a flow from this environment (UUID or slug)
                        if not cached locally
  --deps <dir>          Use this prepared dependency directory instead of
                        auto-installing the runtime; or set QAWOLF_RUNTIME_DIR
                        to relocate the managed runtime
  --allow-no-match      Exit 0 instead of 2 when the pattern selects no runnable
                        flow (default: false)
  --no-browser-deps     Skip installing OS-level browser dependencies (Linux
                        --with-deps, which needs root); requires the system
                        libraries to already be present
  --tag <name>          Only run flows carrying this tag; repeat for several.
                        Without --env, matches against tags cached by the last
                        pull (default: [])
  --all-envs            When a tag matches flows in several pulled environments,
                        run every match instead of choosing one (default: false)
  -h, --help            display help for command

Examples:
  $ qawolf flows run
  $ qawolf flows run "flows/checkout/**"
  $ qawolf flows run --retries 2 --video retain-on-failure
  $ qawolf flows run --tag auth
  $ qawolf flows run --tag auth --env staging
  $ qawolf flows run checkout --env staging --headed
"
`;

exports[`--help output qawolf flows list 1`] = `
"Usage: qawolf flows list [options] [pattern]

List flows matching [pattern] from the local project, or from a QA Wolf
environment with --remote

Options:
  --remote                 List flows from the QA Wolf platform instead of the
                           local project (default: false)
  --env <env>              Environment to list flows from: a QA Wolf environment
                           with --remote, otherwise a pulled one by slug or id
  --include-drafts         Include draft flows in the listing (requires
                           --remote) (default: false)
  --tag <name>             Only list flows carrying this tag; repeat for
                           several. Without --remote, matches against tags
                           cached by the last pull (default: [])
  --ai-task-id <aiTaskId>  List the flows on this AI task's branch, including
                           drafts, instead of the ones in the environment
                           (requires --remote) (env: QAWOLF_AI_TASK_ID)
  -h, --help               display help for command

Examples:
  $ qawolf flows list
  $ qawolf flows list "flows/checkout/**"
  $ qawolf flows list --remote --env staging
  $ qawolf flows list --tag auth
  $ qawolf flows list --env staging --tag auth
  $ qawolf flows list --remote --env staging --tag auth --tag smoke
  $ qawolf flows list "**/checkout/**" --remote --env staging --include-drafts
  $ qawolf flows list --remote --env staging --ai-task-id ait_123
"
`;

exports[`--help output qawolf flows pull 1`] = `
"Usage: qawolf flows pull [options]

Download an environment's flows into the local .qawolf/<env>/ cache

Options:
  --env <env>   Environment to pull from (UUID or kebab-case slug); defaults to
                QAWOLF_ENVIRONMENT, or an interactive picker
  --out <path>  Destination directory (defaults to .qawolf/<env>/)
  --yes         Overwrite locally-modified files without prompting (default:
                false)
  -h, --help    display help for command

Examples:
  $ qawolf flows pull --env staging
  $ qawolf flows pull --env 4e9c... --out ./snapshot
  $ qawolf flows pull --env staging --yes
"
`;

exports[`--help output qawolf runner 1`] = `
"Usage: qawolf runner [options] [command]

Drive an interactive runner on the QA Wolf platform

Options:
  -h, --help                               display help for command

Commands:
  launch [options]                         Launch an interactive runner and make it this directory's default
  list                                     List the runners this directory holds that are still running
  terminate [options]                      End an interactive runner, and the pod it runs on with it
  stop-run [options]                       Stop what a runner is currently executing, leaving the runner up
  keepalive [options]                      Reset a runner's inactivity clock, for a caller that pauses between actions
  run [options] <flowFile>                 Run a flow on an interactive runner, shipping the flow and what it imports
  events [options] <stream>                Print a runner's journal, one entry per line. QA Wolf writes console, recorder, run-events, run-logs, run-status
  screenshot [options]                     Save a JPEG of an interactive runner's screen to a file
  act [options] <action>                   Perform one raw action on a runner's screen: click, double_click, scroll, move, drag, keypress, navigate or type. Use - to read a whole action as JSON from stdin. On a mobile runner only click (button left), drag and type have a touchscreen equivalent; the rest answer action-not-supported-on-mobile
  exec [options] <file>                    Evaluate a snippet against a runner's live page. Use - to read the snippet from stdin
  inspect                                  Read one thing off a runner's live page (browser) or Appium session (mobile)
  import-package [options] <name>          Install a package into a runner's live run, so a snippet or a selection can import it
  highlight-selector [options] [selector]  Highlight what a selector matches on a runner's live page, so the next screenshot shows it. Omit the selector to clear the highlight
  promote-snapshot [options]               Accept a run's screenshot as the new baseline for an image diff, on the runner that produced it
  help [command]                           display help for command
"
`;

exports[`--help output qawolf runner launch 1`] = `
"Usage: qawolf runner launch [options]

Launch an interactive runner and make it this directory's default

Options:
  --id <id>        Id to launch under. Relaunching an id attaches to that runner
  --name <family>  Runner family to run, e.g. playwright
  -h, --help       display help for command

Examples:
  $ qawolf runner launch
  $ qawolf runner launch --name android
  $ qawolf runner launch --id ci
"
`;

exports[`--help output qawolf runner terminate 1`] = `
"Usage: qawolf runner terminate [options]

End an interactive runner, and the pod it runs on with it

Options:
  --runner <id>  Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                 directory's stored runner
  -h, --help     display help for command
"
`;

exports[`--help output qawolf runner stop-run 1`] = `
"Usage: qawolf runner stop-run [options]

Stop what a runner is currently executing, leaving the runner up

Options:
  --runner <id>  Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                 directory's stored runner
  -h, --help     display help for command
"
`;

exports[`--help output qawolf runner run 1`] = `
"Usage: qawolf runner run [options] <flowFile>

Run a flow on an interactive runner, shipping the flow and what it imports

Options:
  --follow             Report the run's status until it settles: in progress,
                       then passed or failed (default: false)
  --logs               Stream every log line the run produces while following.
                       Implies --follow (default: false)
  --run-events         Stream the run's progress events as JSON lines while
                       following. Implies --follow (default: false)
  --recorder-events    Stream the browser actions the runner records as JSON
                       lines while following, from an anchor taken just before
                       submission: the recorder is runner-wide, not run-scoped.
                       Implies --follow (default: false)
  --env-id <env>       QA Wolf environment whose variables the run is given, by
                       id or alias. Defaults to QAWOLF_ENVIRONMENT. QA Wolf
                       reads and decrypts them itself, so they never leave the
                       server and no size limit applies to them
  --env-file <path>    Dotenv file on this machine whose variables the run is
                       given. Pass this or --env-id, not both
  --lines <start-end>  Run only these 1-indexed lines against the browser as it
                       stands, instead of the whole flow from a fresh one
  --lines-file <path>  File the --lines range lives in. Defaults to <flowFile>;
                       pass it only when the lines are in another file, such as
                       a page object
  --runner <id>        Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                       directory's stored runner
  --timeout <seconds>  Give up following after this long. Following keeps the
                       runner alive, so a run that never settles would otherwise
                       bill until the terminal closed (default: "3600")
  -h, --help           display help for command

Examples:
  $ qawolf runner run flows/checkout.flow.ts
  $ qawolf runner run flows/checkout.flow.ts --follow
  $ qawolf runner run flows/checkout.flow.ts --follow --logs
  $ qawolf runner run flows/checkout.flow.ts --lines 12-40
  $ qawolf runner run flows/checkout.flow.ts --lines 4-9 --lines-file pages/login.ts
  $ qawolf runner run flows/checkout.flow.ts --env-id staging
"
`;

exports[`--help output qawolf runner events 1`] = `
"Usage: qawolf runner events [options] <stream>

Print a runner's journal, one entry per line. QA Wolf writes console, recorder,
run-events, run-logs, run-status

Options:
  --follow             Keep reading as new entries arrive. Reading counts as
                       activity, so a follow left open keeps the runner alive
                       and billing (default: false)
  --run <id>           Restrict run-scoped streams to one run
  --runner <id>        Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                       directory's stored runner
  --since <sequence>   Read entries after this sequence
  --tail <count>       Read only the newest <count> entries
  --timeout <seconds>  Give up following after this long. Reading keeps the
                       runner alive, so a follow left open would otherwise bill
                       until the terminal closed (default: "3600")
  -h, --help           display help for command

Examples:
  $ qawolf runner events recorder --tail 5
  $ qawolf runner events run-logs --run <runId> --follow
  $ qawolf runner events console --since 120 --json
"
`;

exports[`--help output qawolf runner keepalive 1`] = `
"Usage: qawolf runner keepalive [options]

Reset a runner's inactivity clock, for a caller that pauses between actions

Options:
  --runner <id>  Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                 directory's stored runner
  -h, --help     display help for command

Examples:
  $ qawolf runner keepalive
  $ qawolf runner keepalive --runner ci
"
`;

exports[`--help output qawolf runner screenshot 1`] = `
"Usage: qawolf runner screenshot [options]

Save a JPEG of an interactive runner's screen to a file

Options:
  --out <path>   File to write the image to (default: "screenshot.jpg")
  --runner <id>  Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                 directory's stored runner
  -h, --help     display help for command

Examples:
  $ qawolf runner screenshot
  $ qawolf runner screenshot --out screens/step-3.jpg
"
`;

exports[`--help output qawolf runner act 1`] = `
"Usage: qawolf runner act [options] <action>

Perform one raw action on a runner's screen: click, double_click, scroll, move,
drag, keypress, navigate or type. Use - to read a whole action as JSON from
stdin. On a mobile runner only click (button left), drag and type have a
touchscreen equivalent; the rest answer action-not-supported-on-mobile

Options:
  --button <button>   click: left, right, wheel, back or forward (mobile: left
                      only)
  --keys <keys...>    keypress: modifiers and the key, e.g. Control a
  --path <json>       drag: JSON array of points to drag through (mobile: only
                      the first and last are used)
  --runner <id>       Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                      directory's stored runner
  --scroll-x <delta>  scroll: horizontal wheel delta
  --scroll-y <delta>  scroll: vertical wheel delta
  --text <text>       type: the text to type
  --url <url>         navigate: the http or https URL to go to
  --x <pixels>        pointer x, in screenshot pixels
  --y <pixels>        pointer y, in screenshot pixels
  -h, --help          display help for command

Examples:
  $ qawolf runner act click --button left --x 480 --y 260
  $ qawolf runner act type --text "hello@example.com"
  $ qawolf runner act keypress --keys Control a
  $ qawolf runner act navigate --url https://example.com
  $ qawolf runner act drag --path '[{"x":10,"y":20},{"x":80,"y":90}]'
  $ echo '{"type":"click","button":"left","x":1,"y":2}' | qawolf runner act -
"
`;

exports[`--help output qawolf runner import-package 1`] = `
"Usage: qawolf runner import-package [options] <name>

Install a package into a runner's live run, so a snippet or a selection can
import it

Options:
  --package-version <version>  Version to install (default: "latest")
  --runner <id>                Runner to target. Defaults to QAWOLF_RUNNER_ID,
                               then this directory's stored runner
  -h, --help                   display help for command

Examples:
  $ qawolf runner import-package dayjs
  $ qawolf runner import-package dayjs --package-version 1.11.13
"
`;

exports[`--help output qawolf runner inspect 1`] = `
"Usage: qawolf runner inspect [options] [command]

Read one thing off a runner's live page (browser) or Appium session (mobile)

Options:
  -h, --help              display help for command

Commands:
  element-html [options]  Print the HTML of the first element a selector matches
  page-html [options]     Print the page's HTML, simplified for a model to read
  variable [options]      Print a top-level variable's value from the running
                          workflow
  session [options]       Print the Appium session's status: ready, or why not
  contexts [options]      List the WebView contexts available, and which is
                          current
  page-source [options]   Print the current context's page source, as a tree
  elements [options]      Find elements at a screen point, or elements carrying
                          some text
  help [command]          display help for command

Examples:
  $ qawolf runner inspect element-html --selector "#email"
  $ qawolf runner inspect page-html > page.html
  $ qawolf runner inspect variable --name cart | jq .total
  $ qawolf runner inspect session
  $ qawolf runner inspect contexts
  $ qawolf runner inspect page-source --context WEBVIEW_1
  $ qawolf runner inspect elements --by point --x 200 --y 400
  $ qawolf runner inspect elements --by text --text "Sign in" --partial
"
`;

exports[`--help output qawolf runner inspect element-html 1`] = `
"Usage: qawolf runner inspect element-html [options]

Print the HTML of the first element a selector matches

Options:
  --selector <selector>  Playwright selector to inspect
  --runner <id>          Runner to target. Defaults to QAWOLF_RUNNER_ID, then
                         this directory's stored runner
  -h, --help             display help for command
"
`;

exports[`--help output qawolf runner inspect page-html 1`] = `
"Usage: qawolf runner inspect page-html [options]

Print the page's HTML, simplified for a model to read

Options:
  --selector <selector>  Limit the output to this subtree
  --runner <id>          Runner to target. Defaults to QAWOLF_RUNNER_ID, then
                         this directory's stored runner
  -h, --help             display help for command
"
`;

exports[`--help output qawolf runner inspect variable 1`] = `
"Usage: qawolf runner inspect variable [options]

Print a top-level variable's value from the running workflow

Options:
  --name <name>  Name of the variable to read
  --runner <id>  Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                 directory's stored runner
  -h, --help     display help for command
"
`;

exports[`--help output qawolf runner inspect session 1`] = `
"Usage: qawolf runner inspect session [options]

Print the Appium session's status: ready, or why not

Options:
  --runner <id>  Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                 directory's stored runner
  -h, --help     display help for command
"
`;

exports[`--help output qawolf runner inspect contexts 1`] = `
"Usage: qawolf runner inspect contexts [options]

List the WebView contexts available, and which is current

Options:
  --runner <id>  Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                 directory's stored runner
  -h, --help     display help for command
"
`;

exports[`--help output qawolf runner inspect page-source 1`] = `
"Usage: qawolf runner inspect page-source [options]

Print the current context's page source, as a tree

Options:
  --context <name>  Read this context instead of the current one
  --runner <id>     Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                    directory's stored runner
  -h, --help        display help for command
"
`;

exports[`--help output qawolf runner inspect elements 1`] = `
"Usage: qawolf runner inspect elements [options]

Find elements at a screen point, or elements carrying some text

Options:
  --by <by>         point or text
  --context <name>  Read this context instead of the current one
  --partial         text: match text containing this, rather than exactly this
  --runner <id>     Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                    directory's stored runner
  --text <text>     text: the text to match
  --x <pixels>      point: whole pixels on the device's own screen
  --y <pixels>      point: whole pixels on the device's own screen
  -h, --help        display help for command
"
`;

exports[`--help output qawolf runner exec 1`] = `
"Usage: qawolf runner exec [options] <file>

Evaluate a snippet against a runner's live page. Use - to read the snippet from
stdin

Options:
  --file <path>  File whose scope the snippet is evaluated in; it and the
                 directory's other files travel with it
  --runner <id>  Runner to target. Defaults to QAWOLF_RUNNER_ID, then this
                 directory's stored runner
  -h, --help     display help for command

Examples:
  $ qawolf runner exec snippet.ts
  $ echo 'console.log(await page.title())' | qawolf runner exec -
  $ qawolf runner exec snippet.ts --file flows/checkout.flow.ts
"
`;
